--- a/device-plugins-for-kubernetes/deploy/manifests/intel-idv-device-plugin.yaml
+++ b/device-plugins-for-kubernetes/deploy/manifests/intel-idv-device-plugin.yaml
@@ -1,21 +1,16 @@
-{{- if .Values.devicePlugin.enabled }}
----
-{{- $daemonsetName := printf "%s" (include "maverikflats-device-plugin.fullname" .) | trunc 63 | trimSuffix "-" }}
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: {{ $daemonsetName }}
+  name: device-plugin
   namespace: kube-system
-  labels:
-    {{- include "maverikflats-device-plugin.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      {{- include "maverikflats-device-plugin.selectorLabels" . | nindent 6 }}
+      name: device-plugin
   template:
     metadata:
       labels:
-        {{- include "maverikflats-device-plugin.templateLabels" . | nindent 8 }}
+        name: device-plugin
     spec:
       initContainers:
         - name: set-permissions
@@ -47,9 +42,10 @@ spec:
               echo "Will use user:group = $USER_ID_TO_USE:$GROUP_ID_TO_USE"
 
               # Process each path
-              for path in /dev/dri /dev/dri/card0 /dev/dri/renderD128 /dev/udmabuf /dev/vfio /dev/bus/usb /tmp/.X11-unix; do
+              for path in /dev/dri /dev/dri/card0 /dev/udmabuf /dev/vfio /dev/bus/usb /tmp/.X11-unix; do
                 if [ -e "$path" ]; then
                   echo "Path $path exists, changing ownership to $USER_ID_TO_USE:$GROUP_ID_TO_USE"
+                  #chown -R root:qemu $path
                   chown -R $USER_ID_TO_USE:$GROUP_ID_TO_USE $path
                   chmod 777 $path
                 else
@@ -62,9 +58,9 @@ spec:
               level: s0
           env:
             - name: USER_ID
-              value: "{{ .Values.userId}}"
+              value: "107"
             - name: GROUP_ID
-              value: "{{ .Values.groupId}}"
+              value: "107"
           volumeMounts:
             - name: dev-dri-mount
               mountPath: /dev/dri
@@ -77,9 +73,8 @@ spec:
             - name: usb-mount
               mountPath: /dev/bus/usb
       containers:
-        {{- if .Values.mvfPluginEnabled }}
-        - name: mvf-device-plugin
-          image: {{ include "maverikflats-device-plugin.fullimage" . }}
+        - name: intel-idv-device-plugin
+          image: 'localhost:5000/intel-idv-device-plugin:v1'
           imagePullPolicy: Always
           volumeMounts:
             - name: device-plugin
@@ -94,7 +89,6 @@ spec:
               mountPath: /dev/vfio
             - name: usb-mount
               mountPath: /dev/bus/usb
-        {{- end }}
       volumes:
         - name: device-plugin
           hostPath:
@@ -114,4 +108,3 @@ spec:
         - name: usb-mount
           hostPath:
             path: /dev/bus/usb
-{{- end }}
