--- a/.github/workflows/qemu-kubevirt.yaml
+++ b/.github/workflows/qemu-kubevirt.yaml
@@ -269,6 +269,7 @@ jobs:
           cd $EDV_HOME/workspace/kubevirt-artifacts
 
           cp $EDV_HOME/workspace/kubevirt/_out/manifests/release/kubevirt-operator.yaml .
+          cp $EDV_HOME/workspace/kubevirt/_out/manifests/release/kubevirt-cr.yaml .
           cp $EDV_HOME/kubevirt-patch/kubevirt-cr-gfx-sriov.yaml .
 
           # Modify the generated operator yaml to specify images by tag, rather than sha256
