--- a/.github/workflows/qemu-kubevirt.yaml
+++ b/.github/workflows/qemu-kubevirt.yaml
@@ -68,16 +68,18 @@ jobs:
           fi
 
           cd ..
-          wget -N https://download.qemu.org/qemu-9.1.0.tar.xz
-          tar -xf qemu-9.1.0.tar.xz
+          git clone https://github.com/qemu/qemu.git qemu-9.1.0
           cd qemu-9.1.0
+          git checkout v9.1.0
           ls -la
 
           mkdir sriov
           cp -r ../Intel-distribution-of-QEMU/00*.patch sriov/
           ls -la sriov/
 
-          git apply --reject --ignore-whitespace --stat sriov/*.patch
+          ls -la
+
+          git apply sriov/*.patch
 
           ./tests/lcitool/libvirt-ci/bin/lcitool --data-dir ./tests/lcitool dockerfile centos-stream-9 qemu > Dockerfile.centos-stream9
           perl -p -i -e 's|zstd &&|zstd libslirp-devel liburing-devel libbpf-devel libblkio-devel &&|g' Dockerfile.centos-stream9
