--- a/.github/workflows/qemu-kubevirt.yaml
+++ b/.github/workflows/qemu-kubevirt.yaml
@@ -78,7 +78,7 @@ jobs:
           cp -r ../Intel-distribution-of-QEMU/00*.patch sriov/
           ls -la sriov/
 
-          git apply --reject --ignore-whitespace --stat sriov/*.patch
+          git apply sriov/*.patch
 
           ./tests/lcitool/libvirt-ci/bin/lcitool --data-dir ./tests/lcitool dockerfile centos-stream-9 qemu > Dockerfile.centos-stream9
           perl -p -i -e 's|zstd &&|zstd libslirp-devel liburing-devel libbpf-devel libblkio-devel &&|g' Dockerfile.centos-stream9
