Add PCIe ids to match Raptor Lake-S GT1 [UHD Graphics 770]
Signed-off-by: Byron Marohn <byron.marohn@intel.com>

--- a/kubevirt-patch/kubevirt-cr-gfx-sriov.yaml
+++ b/kubevirt-patch/kubevirt-cr-gfx-sriov.yaml
@@ -30,3 +30,6 @@ spec:
       - pciVendorSelector: "8086:a7a0"
         resourceName: "intel.com/sriov-gpudevice"
         externalResourceProvider: false
+      - pciVendorSelector: "8086:a780"
+        resourceName: "intel.com/sriov-gpudevice"
+        externalResourceProvider: false
