--- a/.github/workflows/device_plugin.yaml
+++ b/.github/workflows/device_plugin.yaml
@@ -55,13 +55,13 @@ jobs:
 
           cp -a ../deploy/manifests/intel-idv-device-plugin.yaml device-plugin.yaml
 
-          # tar czf intel-idv-device-plugin-$EDV_VERSION.tar.gz busybox.tar device-plugin.tar device-plugin.yaml
-
           for file in *.tar; do
             zstd --no-progress -T0 -16 -f --long=25 "$file" -o "${file}.zst"
           done
 
-          tar cvzf intel-idv-device-plugin-$EDV_VERSION.tar.gz *.zst *.yaml
+          mkdir intel-idv-device-plugin-$EDV_VERSION
+          mv *.zst *.yaml intel-idv-device-plugin-$EDV_VERSION/
+          tar cvzf intel-idv-device-plugin-$EDV_VERSION.tar.gz
 
           ls -hal
 
