fix the pipeline
Signed-off-by: Smitesh Sutaria <smitesh.sutaria@intel.com>

--- a/.github/workflows/device_plugin.yaml
+++ b/.github/workflows/device_plugin.yaml
@@ -61,7 +61,7 @@ jobs:
 
           mkdir intel-idv-device-plugin-$EDV_VERSION
           mv *.zst *.yaml intel-idv-device-plugin-$EDV_VERSION/
-          tar cvzf intel-idv-device-plugin-$EDV_VERSION.tar.gz
+          tar cvzf intel-idv-device-plugin-$EDV_VERSION
 
           ls -hal
 
