--- a/.github/workflows/qemu-kubevirt.yaml
+++ b/.github/workflows/qemu-kubevirt.yaml
@@ -303,7 +303,7 @@ jobs:
 
           mkdir intel-idv-kubevirt-$EDV_VERSION
           mv *.zst *.yaml intel-idv-kubevirt-$EDV_VERSION/
-          tar cvzf intel-idv-kubevirt-$EDV_VERSION.tar.gz
+          tar cvzf intel-idv-kubevirt-$EDV_VERSION
 
           echo "Contents of $(pwd):"
           ls -hal
@@ -356,7 +356,7 @@ jobs:
 
           mkdir intel-idv-kubevirt-$EDV_VERSION
           mv *.zst *.yaml intel-idv-kubevirt-$EDV_VERSION/
-          tar cvzf intel-idv-kubevirt-$EDV_VERSION.tar.gz
+          tar cvzf intel-idv-kubevirt-$EDV_VERSION
 
           echo "Contents of $(pwd):"
           ls -hal
