--- a/idv-services/etc/systemd/user/idv-launcher.service
+++ b/idv-services/etc/systemd/user/idv-launcher.service
@@ -5,7 +5,7 @@ After=idv-init.service
 [Service]
 Type=simple
 Environment=DISPLAY=:0
-ExecStart=/bin/bash -c 'sleep 5 && cd /usr/bin/idv/launcher && /usr/bin/sudo ./start_all_vms.sh | systemd-cat -t idv-services'
+ExecStart=/bin/bash -c 'set -o pipefail; sleep 5 && cd /usr/bin/idv/launcher && /usr/bin/sudo ./start_all_vms.sh | systemd-cat -t idv-launcher-service'
 ExecStop=/bin/bash -c 'cd /usr/bin/idv/launcher && /usr/bin/sudo ./stop_all_vms.sh'
 Restart=always
 RestartSec=5
