Modify qemu/kubevirt actions to always do a clean build on tag
Signed-off-by: Byron Marohn <byron.marohn@intel.com>

--- a/.github/workflows/qemu-kubevirt.yaml
+++ b/.github/workflows/qemu-kubevirt.yaml
@@ -48,7 +48,8 @@ jobs:
         with:
           path: workspace/qemu-9.1.0
           # Use the hash of the document this workflow is based on to decide whether the build should be re-run or not
-          key: qemu-binary-${{ hashFiles('kubevirt-patch/README.md') }}
+          # If the workflow was triggered as a result of pushing a tag, always do a clean cache-free build
+          key: "qemu-binary-${{ github.event_name == 'push' && github.ref_type == 'tag' && github.ref || hashFiles('kubevirt-patch/README.md') }}"
 
       - name: Build and patch QEMU
         if: ${{ steps.cache-qemu.outputs.cache-hit != 'true' }}
@@ -188,8 +189,9 @@ jobs:
         with:
           path: workspace/kubevirt-artifacts
           # Use the hash of the document this workflow is based on to decide whether the build should be re-run or not
+          # If the workflow was triggered as a result of pushing a tag, always do a clean cache-free build
           # NOTE: This must be a superset of the qemu cache hashFiles above. In other words if qemu needs to be rebuilt, so does kubevirt
-          key: kubevirt-binary-${{ hashFiles('kubevirt-patch/0001-Bump-dependency-versions-for-kubevirt-v1.5.0.patch', 'kubevirt-patch/0001-Patching-Kubevirt-with-GTK-libraries_v1.patch', 'kubevirt-patch/README.md') }}
+          key: "kubevirt-binary-${{ github.event_name == 'push' && github.ref_type == 'tag' && github.ref || hashFiles('kubevirt-patch/0001-Bump-dependency-versions-for-kubevirt-v1.5.0.patch', 'kubevirt-patch/0001-Patching-Kubevirt-with-GTK-libraries_v1.patch', 'kubevirt-patch/README.md') }}"
 
       ######################################################################################################3
       # The kubevirt workflow requires 30+ GB of free space to run successfully
