reverting changes to delete it from gfx-sriov-cr
- As it gives option to apply on this CR, if needed.

Signed-off-by: Smitesh Sutaria <smitesh.sutaria@intel.com>

--- a/kubevirt-patch/kubevirt-cr-gfx-sriov.yaml
+++ b/kubevirt-patch/kubevirt-cr-gfx-sriov.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: kubevirt
 spec:
   configuration:
+    developerConfiguration:
+      featureGates:
+        - GPU
+        - HostDevices
+        - Sidecar
     permittedHostDevices:
       pciHostDevices:
       - pciVendorSelector: "8086:7dd5"
