creating kubevirt-cr.yaml which will be used instead of gfx-sriov
- this should not be downloaded from workflow
- apply only this
- corresponding readme changes is required

Signed-off-by: Smitesh Sutaria <smitesh.sutaria@intel.com>

--- a/kubevirt-patch/kubevirt-cr.yaml
+++ b/kubevirt-patch/kubevirt-cr.yaml
@@ -1,9 +1,11 @@
+---
 apiVersion: kubevirt.io/v1
 kind: KubeVirt
 metadata:
   name: kubevirt
   namespace: kubevirt
 spec:
+  certificateRotateStrategy: {}
   configuration:
     developerConfiguration:
       featureGates:
@@ -174,3 +176,6 @@ spec:
       - pciVendorSelector: "${INTEL_IDV_GPU_VENDOR_ID}:${INTEL_IDV_GPU_PRODUCT_ID}"
         resourceName: "intel.com/sriov-gpudevice"
         externalResourceProvider: false
+  customizeComponents: {}
+  imagePullPolicy: IfNotPresent
+  workloadUpdateStrategy: {}
