--- a/.github/workflows/idv-services.yaml
+++ b/.github/workflows/idv-services.yaml
@@ -47,10 +47,10 @@ jobs:
           mkdir -p intel-idv-services-$EDV_VERSION/init
           mkdir -p intel-idv-services-$EDV_VERSION/launcher
 
-          cp autologin.conf intel-idv-services-$EDV_VERSION
-          cp etc/systemd/user/*.service intel-idv-services-$EDV_VERSION
-          cp launcher/*.* intel-idv-services-$EDV_VERSION/launcher
-          cp init/*.* intel-idv-services-$EDV_VERSION/init
+          cp ../idv-services/autologin.conf intel-idv-services-$EDV_VERSION
+          cp ../idv-services/etc/systemd/user/*.service intel-idv-services-$EDV_VERSION
+          cp ../idv-services/launcher/*.* intel-idv-services-$EDV_VERSION/launcher
+          cp ../idv-services/init/*.* intel-idv-services-$EDV_VERSION/init
 
           ls -hal
           tar cvzf intel-idv-services-$EDV_VERSION.tar.gz intel-idv-services-$EDV_VERSION
