Pin workflow & Docker versions; restrict top-level permissions for workflows
Signed-off-by: Byron Marohn <byron.marohn@intel.com>

--- a/.github/workflows/device_plugin_coverity.yaml
+++ b/.github/workflows/device_plugin_coverity.yaml
@@ -30,7 +30,8 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        # checkout@v4.2.2 released 2024 October 23. SHA pinned for enhanced security
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
         with:
           persist-credentials: false
           fetch-depth: 0 # All history, not just latest commit
@@ -41,7 +42,8 @@ jobs:
 
       - name: Load coverity from cache
         id: cache-coverity
-        uses: actions/cache@v4
+        # cache@v4.2.3 released 2025 March 19. SHA pinned for enhanced security
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684
         env:
           cache-name: cache-coverity
         with:
