--- a/.github/workflows/idv-services.yaml
+++ b/.github/workflows/idv-services.yaml
@@ -20,6 +20,9 @@ on:
     tags:
       - "*"
 
+permissions:
+  contents: read
+
 jobs:
   idv-services:
     permissions:
@@ -27,7 +30,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        # checkout@v4.2.2 released 2024 October 23. SHA pinned for enhanced security
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
         with:
           persist-credentials: false
           fetch-depth: 0 # All history, not just latest commit
@@ -42,7 +46,7 @@ jobs:
           mkdir idv-services-artifacts
           cd idv-services-artifacts
           ls -hal
-          
+
           mkdir intel-idv-services-$EDV_VERSION
           mkdir -p intel-idv-services-$EDV_VERSION/init
           mkdir -p intel-idv-services-$EDV_VERSION/launcher
@@ -57,7 +61,8 @@ jobs:
           ls -hal
 
       - name: Upload idv-services release tarball
-        uses: actions/upload-artifact@v4
+        # upload-artifact@v4.6.2 released 2025 March 19. SHA pinned for enhanced security
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: idv-services artifacts
           path: |
